# goit-algo2-hw-09

./: README.md  pyproject.toml  sphere_minimization.py
